test/files/neg/bug4302.scala
object Test {
  def hasMatch[T](x: AnyRef) = x.isInstanceOf[T]
}
